--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,26 +1,25 @@
 ---
 import { desc, lte } from "drizzle-orm";
 import { posts } from "../../../db/schema";
-import Layout from "../../layouts/Layout.astro";
 import { getDb } from "../../lib/db";
 
 // Access Cloudflare bindings from locals
 const { env } = Astro.locals.runtime;
 
-let allPosts: (typeof posts.$inferSelect)[] = [];
-let error = null;
+let _allPosts: (typeof posts.$inferSelect)[] = [];
+let _error = null;
 
 try {
-  const db = getDb(env);
-  allPosts = await db
-    .select()
-    .from(posts)
-    .where(lte(posts.publishedAt, Date.now()))
-    .orderBy(desc(posts.publishedAt))
-    .all();
+	const db = getDb(env);
+	_allPosts = await db
+		.select()
+		.from(posts)
+		.where(lte(posts.publishedAt, Date.now()))
+		.orderBy(desc(posts.publishedAt))
+		.all();
 } catch (e: any) {
-  console.error("Failed to fetch posts:", e);
-  error = e.message;
+	console.error("Failed to fetch posts:", e);
+	_error = e.message;
 }
 ---
 
