--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -1,6 +1,4 @@
----
-export const prerender = true;
----
+import Layout from "../layouts/Layout.astro";
 
 <Layout title="Privacy Policy">
   <div class="max-w-3xl mx-auto py-12 px-6">
