--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
-import { getLangFromUrl } from "../i18n/utils";
+import { ClientRouter } from "astro:transitions";
+import LoadingIndicator from "astro-loading-indicator";
+import { getLangFromUrl, getRouteFromUrl } from "../i18n/utils";
 import "../styles/global.css";
 
 // Font Optimizations (Self-hosted)
